rabbit.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apollos-crib-mqtt-svc
  namespace: apollos-crib
spec:
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
  selector:
    app.kubernetes.io/name: rabbitmq
