app.yml
#cat <<EOF | kubectl apply -f -
apiVersion: v1
kind: Namespace
metadata:
  name: apollos-crib
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollos-crib
  namespace: apollos-crib
  labels:
    name: apollos-crib
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      name: apollos-crib
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: apollos-crib
#      annotations:
    spec:
      containers:
        - image: r.g.gmp.io/lambentri/apollos-crib:latest
          resources:
            requests:
              memory: "1536Mi"
              cpu: "250m"
            limits:
              memory: "3000Mi"
              cpu: "500m"

          imagePullPolicy: Always
#          livenessProbe:
#            httpGet:
#              path: /health/live
#              port: 4040
#
#            initialDelaySeconds: 90
#            periodSeconds: 3
#
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: 4040
#
#            initialDelaySeconds: 90
#            periodSeconds: 3
          name: apollos-crib
          ports:
            - containerPort: 4000
            - containerPort: 4001

      imagePullSecrets:
        - name: gitlabgmp
      priorityClassName: high-priority
---
apiVersion: v1
kind: Service
metadata:
  name: apollos-crib-svc
  namespace: apollos-crib
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    name: apollos-crib
---
apiVersion: v1
kind: Service
metadata:
  name: apollos-crib-hermes-svc
  namespace: apollos-crib
spec:
  ports:
    - port: 80
      targetPort: 4001
      protocol: TCP
  selector:
    name: apollos-crib
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollos-crib-ingress
  namespace: apollos-crib
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        # CHANGE ME
        - ac.gmp.io
        - apollos.gmp.io
        - apollos-crib.gmp.io
      secretName: apollos-crib-tls
  rules:
    # CHANGE ME
    - host: ac.gmp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apollos-crib-svc
                port:
                  number: 80
    - host: apollos.gmp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apollos-crib-svc
                port:
                  number: 80
    - host: apollos-crib.gmp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apollos-crib-svc
                port:
                  number: 80

#  EOF
